--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,60 @@ section {
 }
 
 /* SECCION ARTE */
-
+        
+.galeria-pinturas {
+    padding: 20px;
+} 
+.galeria-pinturas img {
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    display: block;
+    transition: all 0.2s ease;
+}
+.pinturas-contenedor {
+    padding-top: 60px;
+    margin-bottom: 40px;
+} 
+.overlay {
+    transition: all 0.2s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+} 
+.overlay p {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 0;
+} 
+.overlay .iconos-contenedor {
+    display: flex;
+} 
+.overlay i {
+    color: black;
+    font-size: 20px;
+    margin: 10px;
+} 
+.pintura:hover img {
+    opacity: 0.2;
+}
+.pintura:hover .overlay {
+    opacity: 1;
+}
+.pintura {
+    position: relative;
+}
 
 /* SECCION ARTISTAS */
+
+.artistas-imagen {
+    max-height: 50px;
+    max-width: 50px;
+}
 
 
 /* SECCION QUIENES SOMOS */
